# Bindgen-Demo

./: .gitignore  Cargo.toml  README.md  build.rs
src/: Makefile  add.cc  addition.cc  bin.rs  lib.rs
src/include/: add.h
